Fix code quality