@@ -51,9 +51,9 @@ repositories {
 
 dependencies {
     String javaFxVersion = '17.0.7'
-//    implementation "org.openjfx:javafx-controls:17.0.7"
-//    implementation "org.openjfx:javafx-fxml:17.0.7"
-//    implementation "org.openjfx:javafx-graphics:17.0.7"
+    implementation "org.openjfx:javafx-controls:17.0.7"
+    implementation "org.openjfx:javafx-fxml:17.0.7"
+    implementation "org.openjfx:javafx-graphics:17.0.7"
 
     implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'win'
     implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'mac'
@@ -85,10 +85,3 @@ test {
 shadowJar {
     archiveFileName.set('NotAGPT.jar')
 }
-//
-//run {
-//    jvmArgs = [
-//            '--module-path', classpath.asPath,
-//            '--add-modules', 'javafx.controls,javafx.fxml'
-//    ]
-//}
